--- a/Parcial2Ajavp/ClnParcial2Ajavp/ClnParcial2Ajavp.csproj
+++ b/Parcial2Ajavp/ClnParcial2Ajavp/ClnParcial2Ajavp.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SerieCln.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
